--- a/Review.html
+++ b/Review.html
@@ -15,10 +15,10 @@ img {
 <h3 align="center"> Segera lakukan pembayaran sebelum 23:50 WIB hari Rabu, 11 Juli 2018 sebesar</h3>
 <h1 align="center">Rp. 300.000</h1>
 <img class="tengah" src="indomaret.png" height="110px" width="200px">
-<h3 align="center"<h3 align="center">- Pihak indomaret akan mengenakan biaya tambahan sevesar Rp2.500 diluar total tagihan</h3>
+<h3 align="center"<h3 align="center">- Pihak indomaret akan mengenakan biaya tambahan sebesar Rp2.500 diluar total tagihan</h3>
 <h3 align="center">- Maksimum total belanja untuk satu transaksi adalah Rp5.000.000</h3>
 >- Pembayaran dapat dilakukan di semua gerai indomaret</h3>
-<h3 align="center">- Tunjukkan nomor  resi Anda kepada kasir indomaret</h3>
+<h3 align="center">- Tunjukkan nomor resi Anda kepada kasir indomaret</h3>
 <h3 align="center">- Setelah pembayaran berhasil dilakukan, kami akan mengirimkan email konfirmasi kepada Anda</h3>
 <a href="" class="cart-btn">Lihat Tagihan</a> 
 </html>
