--- a/DBeli.html
+++ b/DBeli.html
@@ -52,7 +52,7 @@
      <div class="heading">
 &nbsp;
 <form>
-<h1>Detail Pembeli</h1>
+<h1>Detail Pembeli</h1><br>
 <p>Silakan lengkapi data atau <a href="login.html" class="cart-btn">Login</a> untuk melanjutkan</p>
   <br>  
 	  <input type="text" name="First name" placeholder="Nama*"><br>
@@ -89,6 +89,6 @@
 <p>Catatan</p>
 <textarea rows="4" cols="50" name="comment" form="usrform" placeholder="Contoh: Warna, jenis Ukuran"></textarea><br>
    <br>
-   <input type="submit" name="Send" value="Send">  
+   <a href="Review.html" class="cart-btn">Beli</a> 
     <br><br><br><br> 
 		
