--- a/km2.html
+++ b/km2.html
@@ -30,20 +30,18 @@
             
 <main class="container">
 <div class="left-column">
- <img data-image="black" class="active" src="gambar/kt0.jpg"" alt="">
+ <img data-image="black" class="active" src="gambar/km1.jpg"" alt="">
 </div>
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
+<p>suasana hangat dikamar mandi tercipta dengan memilih warna hangat.  Kamar mandi bernuansa gelap, siapa takut? Bila dahulu kamar mandi gelap dianggap kotor dan menyeramkan. Kini, kamar mandi berwarna hitam menjadi populer karena kesan minimalis mewah yang diberikan. Untuk kamar mandi ini, Anda sangat perlu memperhatikan pencahayaan. Pasang lampu berwarna putih dan juga jendela untuk memberikan pencahayaan alami. </p>
 </div>
 <div class="Product-price">
-<span>Rp.300.000</span>
+<span>Rp.2.300.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
 </body>
-</html>
-
