--- a/kt1r.html
+++ b/kt1r.html
@@ -35,10 +35,21 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
+<p>Ukuran : 3 x 3 </p>
+<p>ukuran spring bed 200 x 200</p>
+<p>desain minimalis, simpel </p>
+<p>Desain kamar tidur apartemen merupakan bagian dari interior apartemen yang harus diperhatikan dalam hal tampilan, 
+karena dengan tampilan yang menarik dan sesuai dengan keinginan anda dapat menambah rasa nyaman dalam menempati apartemen tersebut.
+ Ruang kamar tidur apartemen yang minimalis membuat kita harus pandai dalam menata kamar apartemen tersebut mulai dari pemilihan furniture, 
+ penempatan furniture sampai dengan warna cat atau warna tampilan menjadi penting untuk diperhatikan.
+ Memiliki banyak pilihan ide kamar tidur apartemen yang akan sesuai dengan kita dalam mendapatkan suasana yang diinginkan . 
+ Selain itu, kita juga bisa melakukan sebuah kolaborasi yang menarik pada setiap desain yang kita terapkan .
+ Hal ini juga tergantung pada ukuran kamar tidur . Semakin luas kamar tidur yang kita miliki di apartemen , kita juga akan semakin mudah untuk mendapatkan kenyamanan yang kita inginkan .
+ Selain itu, kita juga dapat memberikan tampilan yang berbeda melalui beberapa furnitur yang kita gunakan .
+ Biasanya furnitur yang terkandung dalam setiap apartemen pilihan desain kamar tidur seperti tempat tidur , sofa , kursi dan lemari .</p>
 </div>
 <div class="Product-price">
-<span>Rp.300.000</span>
+<span>Rp.2.300.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
 </div>
