--- a/dp3.html
+++ b/dp3.html
@@ -30,7 +30,7 @@
             
 <main class="container">
 <div class="left-column">
- <img data-image="black" class="active" src="gambar/kt0.jpg"" alt="">
+ <img data-image="black" class="active" src="gambar/d2.jpg"" alt="">
 </div>
 <div class="right-column">
 <div class="Product-Description">
@@ -45,5 +45,3 @@
 </div>
 </main>
 </body>
-</html>
-
