--- a/km1.html
+++ b/km1.html
@@ -30,20 +30,19 @@
             
 <main class="container">
 <div class="left-column">
- <img data-image="black" class="active" src="gambar/kt0.jpg"" alt="">
+ <img data-image="black" class="active" src="gambar/km0.jpg"" alt="">
 </div>
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
+<p>kamar mandi ini merupakan kamar mandi klasik. ukuran kramik yang digunakan 30 cm x 60 cm.</p>
+
 </div>
 <div class="Product-price">
-<span>Rp.300.000</span>
+<span>Rp.1.700.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
 </body>
-</html>
-
