--- a/kt2.html
+++ b/kt2.html
@@ -30,15 +30,20 @@
             
 <main class="container">
 <div class="left-column">
- <img data-image="black" class="active" src="gambar/kt0.jpg"" alt="">
+ <img data-image="black" class="active" src="gambar/kt1.jpg"" alt="">
 </div>
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
+<p>Ukuran : 4 x 4 </p>
+<p>ukuran spring bed 180 x 200</p>
+<p>Orangtua manasih yang tidak ingin anaknya bahagia? bahkan mereka rela menderita asalkan bisa memberikan yang terbaik untuk sang buah hati.
+ Mulai dari masalah pendidikan, kesehatan, pakaian, makanan, 
+tak terkecuali dengan kamar tidur, orangtua selalu mengutamakan anaknya.
+kamar tidur ini pas untuk anak anak nyaman warnanya kalem tempat tidurnya pun uik pokoknya cocok untuk anak anda.</p>
 </div>
 <div class="Product-price">
-<span>Rp.300.000</span>
+<span>Rp.2.500.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
 </div>
@@ -46,4 +51,3 @@
 </main>
 </body>
 </html>
-
