--- a/kt3.html
+++ b/kt3.html
@@ -30,20 +30,21 @@
             
 <main class="container">
 <div class="left-column">
- <img data-image="black" class="active" src="gambar/kt0.jpg"" alt="">
+ <img data-image="black" class="active" src="gambar/kt2.jpg"" alt="">
 </div>
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
+<p>Ukuran : 3 x 3 </p>
+<p>ukuran spring bed 180 x 200</p>
+<p>Kamar tidur merupakan tempat terpenting dalam sebuah rumah. Ruangan ini berfungsi sebagai tempat istirahat dan ruang pribadi. Untuk itu, kamar tidur perlu didesain dan ditata dengan baik supaya Anda merasa nyaman dan betah berada dalam kamar.
+Meskipun begitu, masih banyak yang belum mengetahui cara menata kamar tidur yang baik, sehingga merasa tidak betah berada dalam kamar tidur. Berikut ini tips desain interior kamar tidur sederhana yang dapat Anda terapkan. Meskipun sederhana, kamar tidur tetap nyaman digunakan untuk beristirahat dan beraktivitas.</p>
 </div>
 <div class="Product-price">
-<span>Rp.300.000</span>
+<span>Rp.2.600.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
 </body>
-</html>
-
