--- a/konsultasi.html
+++ b/konsultasi.html
@@ -9,7 +9,10 @@
     <!-- Mobile Specific Metas
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   
+    <!-- Bootstrap css file-->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+     <!-- Font awesome css file-->
+    <link href="css/font-awesome.min.css" rel="stylesheet">
     <!-- Superslide css file-->
     <link rel="stylesheet" href="css/superslides.css">
     <!-- Slick slider css file -->
