--- a/Lukisan.html
+++ b/Lukisan.html
@@ -6,7 +6,8 @@
     <link rel="icon" href="OMAHKU.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <!-- Bootstrap css file-->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
      <!-- Font awesome css file-->
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <!-- Superslide css file-->
