--- a/lukisan2.html
+++ b/lukisan2.html
@@ -6,7 +6,7 @@
 <title>Lukisan</title>
 <link href="art3.css" rel="stylesheet">    
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<link href="css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 <body>
