--- a/DBeli.html
+++ b/DBeli.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Belanja</title>
+    <title>Hubungi Kami</title>
     <link rel="stylesheet" type="text/css" href="DBeli.css">
     <link rel="icon" href="OMAHKU.png">
     
@@ -52,7 +52,7 @@
      <div class="heading">
 &nbsp;
 <form>
-<h1>Detail Pembeli</h1><br>
+<h1>Detail Pembeli</h1>
 <p>Silakan lengkapi data atau <a href="login.html" class="cart-btn">Login</a> untuk melanjutkan</p>
   <br>  
 	  <input type="text" name="First name" placeholder="Nama*"><br>
@@ -89,6 +89,6 @@
 <p>Catatan</p>
 <textarea rows="4" cols="50" name="comment" form="usrform" placeholder="Contoh: Warna, jenis Ukuran"></textarea><br>
    <br>
-   <a href="Review.html" class="cart-btn">Beli</a> 
+   <input type="submit" name="Send" value="Send">  
     <br><br><br><br> 
 		
