--- a/DFM9.html
+++ b/DFM9.html
@@ -42,7 +42,7 @@
 </div>
 <div class="Product-price">
 <span>Rp.1.350.000</span>
-<a href="DBeli.html" class="cart-btn">Beli</a>
+<a href="" target="_blank" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
