--- a/DFL.html
+++ b/DFL.html
@@ -43,6 +43,7 @@
 <div class="Product-price">
 <span>Rp.750.000</span>
 <a href="DBeli.html" class="cart-btn">Beli</a>
+<br>&copy; omahku.com
 </div>
 </div>
 </main>
