--- a/DFL9.html
+++ b/DFL9.html
@@ -44,7 +44,8 @@
 </div>
 <div class="Product-price">
 <span>Rp.1.500.000</span>
-<a href="DBeli.html" class="cart-btn">Beli</a>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+<br>&copy; omahku.com
 </div>
 </div>
 </main>
