--- a/DFM6.html
+++ b/DFM6.html
@@ -42,7 +42,8 @@
 </div>
 <div class="Product-price">
 <span>Rp.515.000</span>
-<a href="DBeli.html" class="cart-btn">Beli</a>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+<br>&copy; omahku.com
 </div>
 </div>
 </main>
