--- a/DFR12.html
+++ b/DFR12.html
@@ -36,14 +36,15 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>RANJANG TINGKAT ANAK</b></h1>
-<p>Bahan kayu mahoni perhutani</p>
+<p>Bahan kayu jati perhutani</p>
 <p>Ukuran 120cm x 200cm atas 100cm x 200cm</p>
 <p>Finishing natural/color/menyesuaikan pesanan</p>
 
 </div>
 <div class="Product-price">
 <span>Rp.2.500.000</span>
-<a href="DBeli.html" class="cart-btn">Beli</a>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+<br>&copy; omahku.com
 </div>
 </div>
 </main>
