--- a/DFR3.html
+++ b/DFR3.html
@@ -35,14 +35,15 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>RANJANG BESI LIBRA</b></h1>
+<h1><b>RANJANG BESI LIBRA SHARP</b></h1>
 <p>Dimensi: 208 x 96 x 79 cm</p>
 <p>Warna yang tersedia: Black/Red</p>
 <p>Harga tertera BELUM termasuk kasur / busa.</p>
 </div>
 <div class="Product-price">
 <span>Rp.725.000</span>
-<a href="DBeli.html" class="cart-btn">Beli</a>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+<br>&copy; omahku.com
 </div>
 </div>
 </main>
