--- a/DFR7.html
+++ b/DFR7.html
@@ -36,15 +36,14 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>RANJANG PLUS 4 LACI</b></h1>
-<p>Bahan MAHONI BAGUS PILIHAN</p>
-<p>finishing: MELAMINE NATURAL GLOSS
 (bisa riquest warna)</p>
 <p>ukuran : 100 x 195. ( bisa riquest ukuran ) </p>
 <p>harga barang matang siap pakai.</p>
 </div>
 <div class="Product-price">
 <span>Rp.1.900.000</span>
-<a href="DBeli.html" class="cart-btn">Beli</a>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+<br>&copy; omahku.com
 </div>
 </div>
 </main>
