--- a/DFL6.html
+++ b/DFL6.html
@@ -41,8 +41,9 @@
 <p>Top bisa dibuka</p>
 </div>
 <div class="Product-price">
-<span>Rp.530.000</span>
-<a href="DBeli.html" class="cart-btn">Beli</a>
+<span>Rp.5.300.000</span>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+<br>&copy; omahku.com
 </div>
 </div>
 </main>
