--- a/DFM5.html
+++ b/DFM5.html
@@ -43,6 +43,7 @@
 <div class="Product-price">
 <span>Rp.500.000</span>
 <a href="" target="_blank" class="cart-btn">Beli</a>
+<br>&copy; omahku.com
 </div>
 </div>
 </main>
