--- a/DFM9.html
+++ b/DFM9.html
@@ -43,6 +43,7 @@
 <div class="Product-price">
 <span>Rp.1.350.000</span>
 <a href="" target="_blank" class="cart-btn">Beli</a>
+<br>&copy; omahku.com
 </div>
 </div>
 </main>
