--- a/DFurnitur.html
+++ b/DFurnitur.html
@@ -2,12 +2,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Product Color Charger | Tutorial by lisense</title>
+<title>Beli Kursi</title>
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 <link href="DFurnitur.css" rel="stylesheet">
 <meta name="robots" content="noindex,follow"/>
     
 <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap css file-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -25,22 +26,23 @@
            <a href="Art.html">Art & Crafts</a>
             <li><a href="Contact.html"> Contact</a> </li>
             <li><a href="About.html">About</a> </li>
-                </ul>
+            </ul>      
         </div>
             
 <main class="container">
 <div class="left-column">
- <img data-image="black" class="active" src="gambar/kt0.jpg"" alt="">
+ <img data-image="black" class="active" src="color/Kursi/Kursi Bar.jpg" alt="">
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>klasik</b></h1>
-<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
+<h1><b>KURSI BAR</b></h1>
+<p>Diameter kursi : 35 cm</p>
+<p>Tinggi : 50 cm</p>
+<p>Papan bentuk abstrak mengikuti natural kayu.</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
-    <br>
-<a href="" target="_blank" class="cart-btn">Beli</a>
+<a href="DBeli.html" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
