--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
         
         <div class="welcome">
-           <h2>Style, Comfort and Quality</h2>
+           <h2><b>Style, Comfort and Quality<b></h2>
             
             <div class="button">
                 <a href="login.html" class="btn btn-one">Login</a>
