--- a/jam1.html
+++ b/jam1.html
@@ -29,7 +29,7 @@
             
 <main class="container">
 <div class="left-column">
- <img data-image="black" class="active" src="gambar/art/jam1.jpg" alt="">
+ <img data-image="black" class="active" src="art/jam1.jpg" alt="">
 </div>
 <div class="right-column">
 <div class="Product-Description">
