--- a/vas2.html
+++ b/vas2.html
@@ -36,7 +36,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>vas Oval</b></h1>
-<p>Ukuran : 170 x 40 x 230 cm</p>
+<p>kaca</p>
 
 </div>
 <div class="Product-price">
