--- a/cerminbulat10.html
+++ b/cerminbulat10.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 <link href="DFurnitur.css" rel="stylesheet">
 <meta name="robots" content="noindex,follow"/>
-    
+&copy;    
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap css file-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -38,11 +38,12 @@
 <h1><b>Kaca Kamar Mandi</b></h1>
 <p>Ukuran : 170 x 40 x 230 cm</p>
 <p>Lemari pajangan jati</p>
-<p>Lemari pajangan kristal</p>
 </div>
 <div class="Product-price">
 <span>Rp.500.000</span>
 <a href="" target="_blank" class="cart-btn">Beli</a>
+&reg;omahku.com &nbsp
+
 </div>
 </div>
 </main>
