--- a/cerminbulat2.html
+++ b/cerminbulat2.html
@@ -8,8 +8,6 @@
 <meta name="robots" content="noindex,follow"/>
     
 <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap css file-->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
  <header>
@@ -43,6 +41,8 @@
 <div class="Product-price">
 <span>Rp.400.000</span>
 <a href="" target="_blank" class="cart-btn">Beli</a>
+&reg;omahku.com &nbsp
+
 </div>
 </div>
 </main>
