--- a/cerminbulat8.html
+++ b/cerminbulat8.html
@@ -28,7 +28,7 @@
             <li><a href="About.html">About</a> </li>
             </ul>      
         </div>
-            
+&nbsp;            
 <main class="container">
 <div class="left-column">
  <img data-image="black" class="active" src="gambar/art/Cermin/Cermin Minimalis Mewah.jpg" alt="">
@@ -43,6 +43,8 @@
 <div class="Product-price">
 <span>Rp.400.000</span>
 <a href="" target="_blank" class="cart-btn">Beli</a>
+&reg;omahku.com &nbsp
+
 </div>
 </div>
 </main>
