--- a/cerminbulat6.html
+++ b/cerminbulat6.html
@@ -43,6 +43,8 @@
 <div class="Product-price">
 <span>Rp.400.000</span>
 <a href="" target="_blank" class="cart-btn">Beli</a>
+&reg;omahku.com &nbsp
+
 </div>
 </div>
 </main>
