--- a/cerminbulat7.html
+++ b/cerminbulat7.html
@@ -43,6 +43,8 @@
 <div class="Product-price">
 <span>Rp.500.000</span>
 <a href="" target="_blank" class="cart-btn">Beli</a>
+&reg;omahku.com &nbsp
+&nbsp;
 </div>
 </div>
 </main>
