--- a/DFL3.html
+++ b/DFL3.html
@@ -44,7 +44,7 @@
 </div>
 <div class="Product-price">
 <span>Rp.700.000</span>
-<a href="" target="_blank" class="cart-btn">Beli</a>
+<a href="DBeli.html" class="cart-btn">Beli</a>
 <br>&copy; omahku.com
 </div>
 </div>
