--- a/DFL5.html
+++ b/DFL5.html
@@ -42,7 +42,7 @@
 </div>
 <div class="Product-price">
 <span>Rp.1.200.000</span>
-<a href="" target="_blank" class="cart-btn">Beli</a>
+<a href="DBeli.html" class="cart-btn">Beli</a>
 <br>&copy; omahku.com
 </div>
 </div>
