--- a/DFL7.html
+++ b/DFL7.html
@@ -45,7 +45,7 @@
 </div>
 <div class="Product-price">
 <span>Rp.1.540.000</span>
-<a href="" target="_blank" class="cart-btn">Beli</a>
+<a href="DBeli.html" class="cart-btn">Beli</a>
 <br>&copy; omahku.com
 </div>
 </div>
