--- a/DFL9.html
+++ b/DFL9.html
@@ -31,16 +31,20 @@
             
 <main class="container">
 <div class="left-column">
- <img data-image="black" class="active" src="color/Lemari/Lemari Pakaian LP	.jpg" alt="">
+ <img data-image="black" class="active" src="color/Lemari/Lemari Pakaian LP.jpg" alt="">
 </div>
 <div class="right-column">
 <div class="Product-Description">
-
+<h1><b>LEMARI PAKAIAN LP</b></h1>
+<p>Ukuran : 112 x 58 x 190 cm</p>
+<p>Bahan : Kayu jati</p>
+<p>Lemari 2 pintu</p>
 <p>
 <p></p>
 </div>
 <div class="Product-price">
 <span>Rp.1.500.000</span>
+<a href="DBeli.html" class="cart-btn">Beli</a>
 
 </div>
 </div>
