--- a/DFL11.html
+++ b/DFL11.html
@@ -1,5 +1,3 @@
-
-
 <html>
 <head>
 <meta charset="utf-8">
@@ -46,8 +44,7 @@
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
-<a href="" target="_blank" class="cart-btn">Beli</a>
-<br>&copy; omahku.com
+<a href="DBelli.html" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
