--- a/DFL6.html
+++ b/DFL6.html
@@ -42,8 +42,7 @@
 </div>
 <div class="Product-price">
 <span>Rp.5.300.000</span>
-<a href="" target="_blank" class="cart-btn">Beli</a>
-<br>&copy; omahku.com
+<a href="DBeli.html" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
