--- a/DFL11.html
+++ b/DFL11.html
@@ -44,7 +44,7 @@
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
-<a href="DBelli.html" class="cart-btn">Beli</a>
+<a href="DBeli.html" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
