--- a/km1.html
+++ b/km1.html
@@ -11,4 +11,10 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<span>Rp.1.700.000</span>
+    <br>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+</div>
+</div>
+</main>
 </body>
