--- a/km2.html
+++ b/km2.html
@@ -1,14 +1,28 @@
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Product Color Charger | Tutorial by lisense</title>
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-<link href="DFurnitur.css" rel="stylesheet">
-<meta name="robots" content="noindex,follow"/>
-    
-<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+ <header>
+        <div class="nav-bar">
+        <img src="omahku.png" class="logo">
+     	<ul class="menu">
+                </ul>
+        </div>
+            
+<main class="container">
+<div class="left-column">
+ <img data-image="black" class="active" src="gambar/km1.jpg"" alt="">
+</div>
+<div class="right-column">
+<div class="Product-Description">
+<h1><b>klasik</b></h1>
+<p>suasana hangat dikamar mandi tercipta dengan memilih warna hangat.  Kamar mandi bernuansa gelap, siapa takut? Bila dahulu kamar mandi gelap dianggap kotor dan menyeramkan. Kini, kamar mandi berwarna hitam menjadi populer karena kesan minimalis mewah yang diberikan. Untuk kamar mandi ini, Anda sangat perlu memperhatikan pencahayaan. Pasang lampu berwarna putih dan juga jendela untuk memberikan pencahayaan alami. </p>
+</div>
+<div class="Product-price">
+<span>Rp.2.300.000</span>
+    <br>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+</div>
+</div>
+</main>
 </body>
