--- a/dp2.html
+++ b/dp2.html
@@ -11,4 +11,24 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+ <header>
+                </ul>
+        </div>
+            
+<main class="container">
+<div class="left-column">
+ <img data-image="black" class="active" src="gambar/d1.jpg"" alt="">
+</div>
+<div class="right-column">
+<div class="Product-Description">
+<h1><b>klasik</b></h1>
+<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
+</div>
+<div class="Product-price">
+<span>Rp.300.000</span>
+    <br>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+</div>
+</div>
+</main>
 </body>
