--- a/dp3.html
+++ b/dp3.html
@@ -11,4 +11,17 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+ <header>
+<div class="right-column">
+<div class="Product-Description">
+<h1><b>klasik</b></h1>
+<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
+</div>
+<div class="Product-price">
+<span>Rp.300.000</span>
+    <br>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+</div>
+</div>
+</main>
 </body>
