--- a/km4.html
+++ b/km4.html
@@ -1,14 +1,31 @@
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Product Color Charger | Tutorial by lisense</title>
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-<link href="DFurnitur.css" rel="stylesheet">
-<meta name="robots" content="noindex,follow"/>
-    
-<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+
+ <header>
+        <div class="nav-bar">
+        <img src="omahku.png" class="logo">
+     	<ul class="menu">
+            <li><a href="index.html"> Home </a> </li>
+            <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Categories</a>
+            <div class="dropdown-content">
+                </ul>
+        </div>
+            
+<main class="container">
+<div class="left-column">
+ <img data-image="black" class="active" src="gambar/km3.jpg"" alt="">
+</div>
+<div class="right-column">
+<div class="Product-Description">
+<h1><b>klasik</b></h1>
+<p>kamarmandi ukuran 2 x 2 ini memiliki efek cahaya lampu yang terang dan gaya klasik  </p>
+</div>
+<div class="Product-price">
+<span>Rp.2.100.000</span>
+    <br>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+</div>
+</div>
+</main>
 </body>
