--- a/rk3.html
+++ b/rk3.html
@@ -12,4 +12,27 @@
 </head>
 <body>
  <header>
+        <div class="nav-bar">
+        <img src="omahku.png" class="logo">
+         <a href="Furniture.html">Furniture</a>
+            <li><a href="About.html">About</a> </li>
+                </ul>
+        </div>
+            
+<main class="container">
+<div class="left-column">
+ <img data-image="black" class="active" src="gambar/rk2.jpg"" alt="">
+</div>
+<div class="right-column">
+<div class="Product-Description">
+<h1><b>klasik</b></h1>
+<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
+</div>
+<div class="Product-price">
+<span>Rp.300.000</span>
+    <br>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+</div>
+</div>
+</main>
 </body>
