--- a/rt2.html
+++ b/rt2.html
@@ -12,4 +12,31 @@
 </head>
 <body>
  <header>
+        <div class="nav-bar">
+        <img src="omahku.png" class="logo">
+     	<ul class="menu">
+         <a href="Interior.html">Interior</a>
+           <a href="Furniture.html">Furniture</a>
+           <a href="Color.html">Color Inspiration</a>
+           <a href="Art.html">Art & Crafts</a>
+            <li><a href="Contact.html"> Contact</a> </li>
+            <li><a href="About.html">About</a> </li>
+                </ul>
+        </div>
+            
+<main class="container">
+<div class="left-column">
+ <img data-image="black" class="active" src="gambar/rt1.jpg"" alt="">
+</div>
+<div class="right-column">
+<div class="Product-Description">
+<h1><b>klasik</b></h1>
+</div>
+<div class="Product-price">
+<span>Rp.300.000</span>
+    <br>
+<a href="" target="_blank" class="cart-btn">Beli</a>
+</div>
+</div>
+</main>
 </body>
