--- a/dp3.html
+++ b/dp3.html
@@ -12,6 +12,26 @@
 </head>
 <body>
  <header>
+        <div class="nav-bar">
+        <img src="omahku.png" class="logo">
+     	<ul class="menu">
+            <li><a href="index.html"> Home </a> </li>
+            <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Categories</a>
+            <div class="dropdown-content">
+           <a href="Interior.html">Interior</a>
+           <a href="Furniture.html">Furniture</a>
+           <a href="Color.html">Color Inspiration</a>
+           <a href="Art.html">Art & Crafts</a>
+            <li><a href="Contact.html"> Contact</a> </li>
+            <li><a href="About.html">About</a> </li>
+                </ul>
+        </div>
+            
+<main class="container">
+<div class="left-column">
+ <img data-image="black" class="active" src="gambar/d2.jpg"" alt="">
+</div>
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
