--- a/km2.html
+++ b/km2.html
@@ -1,11 +1,30 @@
 <html>
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Product Color Charger | Tutorial by lisense</title>
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+<link href="DFurnitur.css" rel="stylesheet">
+<meta name="robots" content="noindex,follow"/>
+    
+<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
  <header>
         <div class="nav-bar">
         <img src="omahku.png" class="logo">
      	<ul class="menu">
+            <li><a href="index.html"> Home </a> </li>
+            <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Categories</a>
+            <div class="dropdown-content">
+           <a href="Interior.html">Interior</a>
+           <a href="Furniture.html">Furniture</a>
+           <a href="Color.html">Color Inspiration</a>
+           <a href="Art.html">Art & Crafts</a>
+            <li><a href="Contact.html"> Contact</a> </li>
+            <li><a href="About.html">About</a> </li>
                 </ul>
         </div>
             
