--- a/km1.html
+++ b/km1.html
@@ -34,8 +34,8 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>klasik</b></h1>
-<p>kamar mandi ini merupakan kamar mandi klasik. ukuran kramik yang digunakan 30 cm x 60 cm.</p>
+<h1><b>Tradisional</b></h1>
+<p>kamar  mandi adalah tempat untuk memenuhi kebutuhan kebersihan anda</p>
 
 </div>
 <div class="Product-price">
