--- a/km4.html
+++ b/km4.html
@@ -34,8 +34,8 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>klasik</b></h1>
-<p>kamarmandi ukuran 2 x 2 ini memiliki efek cahaya lampu yang terang dan gaya klasik  </p>
+<h1><b>Minimalis</b></h1>
+<p>kamar  mandi adalah tempat untuk memenuhi kebutuhan kebersihan anda</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.100.000</span>
