--- a/kt3.html
+++ b/kt3.html
@@ -34,11 +34,10 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>klasik</b></h1>
+<h1><b>Tua</b></h1>
 <p>Ukuran : 3 x 3 </p>
 <p>ukuran spring bed 180 x 200</p>
-<p>Kamar tidur merupakan tempat terpenting dalam sebuah rumah. Ruangan ini berfungsi sebagai tempat istirahat dan ruang pribadi. Untuk itu, kamar tidur perlu didesain dan ditata dengan baik supaya Anda merasa nyaman dan betah berada dalam kamar.
-Meskipun begitu, masih banyak yang belum mengetahui cara menata kamar tidur yang baik, sehingga merasa tidak betah berada dalam kamar tidur. Berikut ini tips desain interior kamar tidur sederhana yang dapat Anda terapkan. Meskipun sederhana, kamar tidur tetap nyaman digunakan untuk beristirahat dan beraktivitas.</p>
+<p>kamar tidur model lama</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.600.000</span>
