--- a/kt4.html
+++ b/kt4.html
@@ -34,12 +34,11 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>klasik</b></h1>
+<h1><b>Moderen</b></h1>
 <p>Ukuran : 3 x 3 </p>
-<p>ukuran spring bed 180 x 200</p>
-<p>Desain kamar tidur ukuran 3x3 meter dibuat khusus untuk memberikan gambaran rancangan untuk anda yang sedang membutuhkan inspirasi dalam pembuatan kamar tidur dengan ukuran luas ruangan yang sedikit yaitu 3x3 meter.
-Susah-susah gampang memang menata ruangan kamar tidur dengan ukuran luas yang sedikit. Kita dituntut untuk cerdas dan kreatif dalam pengambilan setiap keputusannya. Karena salah sedikit perhitungan bisa jadi membuat sedikit rasa tidak nyaman suasana pada tempat tidur anda. Ruangan dengan ukuran luas 3x3 meter itu dirasa kurang untuk membuat kamar tidur utama. Maka dari itu, cara alternatif dalam pengusungan konsepnya adalah dengan hunian minimalis. Hunian minimalis modern adalah konsep yang banyak digandrungi masyarakat masa kini. Dalam konsep minimalis modern itu mengedepankan paduan furniture yang modern dengan tata letak yang kreatif serta warna yang mengandung nilai seni. Maka dari itu, kumpulan desain kamar tidur ukuran 3x3 meter setidaknya bermanfaat untuk memberikan informasi juga inspirasi dalam meng-akali luas ukuran ruangan yang sedikit tetapi tidak terlihat sempit.
-Dalam mendesain kamar tidur ukuran 3x3 meter yang modern, banyak hal yang perlu diperhatikan. Diantaranya adalah pemilihan warna cat dinding kamar, warna gorden jendela, letak furniture, dan luasnya jendela. Pemilihan warna cat dinding kamar disarankan untuk memilih warna yang terang, sejuk, terutama warna putih dan warna netral lainnya. Dengan memilih warna terang dan juga netral, diharapkan dapat memberi kesan luas terhadap ruangan kamar tidur tersebut. Sebaiknya jangan menempelkan wallpaper pada dindingnya, karena wallpaper justru akan memberikan efek penuh. Adapun kalau ingin mengkombinasikan warna pada dinding, pilihlah warna yang mengimbanginya seperti warna yang gelap. Jangan mengimbangi dengan warna terang lainnya. Untuk pemilihan warna gorden, sebaiknya ambil warna putih atau warna lembut lainnya. Juga kalau bisa jangan memilih kain gorden yang berumpak karena akan memberikan kesan penuh. Jendela kamar bisa diusahakan besar karena itu berguna memberikan efek luas pada ruangan. Kemudian untuk furniture kamar, diusahakan jangan memilih perabotan yang besar. Usahakan secukupnya dan sepantasnya ketika ditempatkan pada ruangan. Kalau bisa juga pilih perabotan yang multi guna. Selain berguna meminimalisir penggunaan barang, juga memanfaatkan ruangan yang tidak terpakai seperti kolong kasur. Banyak cermin juga dirasa baik agar memberikan suasana luas dalam desain kamar tidur ukuran 3x3 meter ini.</p>
+<p>ukuran spring bed 180 x 200 vm</p>
+<p>simpel, minimalis</p>
+<p>Memenuhi kebutuhan istirahat anda dan pasangan</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
