--- a/dp4.html
+++ b/dp4.html
@@ -34,8 +34,8 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>klasik</b></h1>
-<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
+<h1><b>Tradisional</b></h1>
+<p>dapur adalah tempat untuk memenuhi kebutuhan makanan nada</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
