--- a/km2.html
+++ b/km2.html
@@ -34,8 +34,8 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>klasik</b></h1>
-<p>suasana hangat dikamar mandi tercipta dengan memilih warna hangat.  Kamar mandi bernuansa gelap, siapa takut? Bila dahulu kamar mandi gelap dianggap kotor dan menyeramkan. Kini, kamar mandi berwarna hitam menjadi populer karena kesan minimalis mewah yang diberikan. Untuk kamar mandi ini, Anda sangat perlu memperhatikan pencahayaan. Pasang lampu berwarna putih dan juga jendela untuk memberikan pencahayaan alami. </p>
+<h1><b>Moderen</b></h1>
+<p>kamar  mandi adalah tempat untuk memenuhi kebutuhan kebersihan anda. </p>
 </div>
 <div class="Product-price">
 <span>Rp.2.300.000</span>
