--- a/km3.html
+++ b/km3.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>kamar mandi inimemiliki gaya klasik, minimali </p>
+<p>kamar  mandi adalah tempat untuk memenuhi kebutuhan kebersihan anda</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.300.000</span>
