--- a/kt2.html
+++ b/kt2.html
@@ -37,10 +37,7 @@
 <h1><b>klasik</b></h1>
 <p>Ukuran : 4 x 4 </p>
 <p>ukuran spring bed 180 x 200</p>
-<p>Orangtua manasih yang tidak ingin anaknya bahagia? bahkan mereka rela menderita asalkan bisa memberikan yang terbaik untuk sang buah hati.
- Mulai dari masalah pendidikan, kesehatan, pakaian, makanan, 
-tak terkecuali dengan kamar tidur, orangtua selalu mengutamakan anaknya.
-kamar tidur ini pas untuk anak anak nyaman warnanya kalem tempat tidurnya pun uik pokoknya cocok untuk anak anda.</p>
+<p>Memenuhi kebutuhan istirahat anda dan pasangan</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.500.000</span>
