--- a/km1.html
+++ b/km1.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>Tradisional</b></h1>
-<p>kamar  mandi adalah tempat untuk memenuhi kebutuhan kebersihan anda</p>
+<p>dengandisain tradisional mengingatkan pada masa muda anda</p>
 
 </div>
 <div class="Product-price">
