--- a/km2.html
+++ b/km2.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>Moderen</b></h1>
-<p>kamar  mandi adalah tempat untuk memenuhi kebutuhan kebersihan anda. </p>
+<p>menambah kesan kemewahan rumah</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.300.000</span>
