--- a/km4.html
+++ b/km4.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>Minimalis</b></h1>
-<p>kamar  mandi adalah tempat untuk memenuhi kebutuhan kebersihan anda</p>
+<p>tepat untuk ruang sempit</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.100.000</span>
