--- a/kt1r.html
+++ b/kt1r.html
@@ -38,9 +38,7 @@
 <p>Ukuran : 3 x 3 </p>
 <p>ukuran spring bed 200 x 200</p>
 <p>desain minimalis, simpel, lebar</p>
-<p>Desain kamar tidur apartemen merupakan bagian dari interior apartemen yang harus diperhatikan dalam hal tampilan, 
-karena dengan tampilan yang menarik dan sesuai dengan keinginan anda </p>
-<p>Memenuhi kebutuhan istirahat anda dan pasangan</p>
+<p>tepat untuk tempat sempit</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.300.000</span>
