--- a/kt4.html
+++ b/kt4.html
@@ -38,7 +38,7 @@
 <p>Ukuran : 3 x 3 </p>
 <p>ukuran spring bed 180 x 200 vm</p>
 <p>simpel, minimalis</p>
-<p>Memenuhi kebutuhan istirahat anda dan pasangan</p>
+<p>menambah kesan mewah pada rumah</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
