--- a/dpr2.html
+++ b/dpr2.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>dapur adalah tempat untuk memenuhi kebutuhan makanan nada</p>
+<p>disain terbaik dari kami</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
