--- a/dpr2.html
+++ b/dpr2.html
@@ -34,8 +34,8 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>klasik</b></h1>
-<p>disain terbaik dari kami</p>
+<h1><b>Urban</b></h1>
+<p>dengan disain layaknya di perkotaan</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
