--- a/dpr4.html
+++ b/dpr4.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>Tradisional</b></h1>
-<p>dapur adalah tempat untuk memenuhi kebutuhan makanan nada</p>
+<p> model terbaik kami</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
