--- a/km4.html
+++ b/km4.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>Minimalis</b></h1>
-<p>tepat untuk ruang sempit</p>
+<p>tepat untuk ruang sempit namun tetap lengkap</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.100.000</span>
