--- a/kt2.html
+++ b/kt2.html
@@ -37,7 +37,7 @@
 <h1><b>klasik</b></h1>
 <p>Ukuran : 4 x 4 </p>
 <p>ukuran spring bed 180 x 200</p>
-<p>ukuran ranjang yang lebar</p>
+<p>ukuran ranjang yang lebar dan kokoh</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.500.000</span>
