--- a/rt2.html
+++ b/rt2.html
@@ -15,7 +15,11 @@
         <div class="nav-bar">
         <img src="omahku.png" class="logo">
      	<ul class="menu">
-         <a href="Interior.html">Interior</a>
+            <li><a href="index.html"> Home </a> </li>
+            <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Categories</a>
+            <div class="dropdown-content">
+           <a href="Interior.html">Interior</a>
            <a href="Furniture.html">Furniture</a>
            <a href="Color.html">Color Inspiration</a>
            <a href="Art.html">Art & Crafts</a>
@@ -31,6 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
+<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
