--- a/rt4.html
+++ b/rt4.html
@@ -14,6 +14,11 @@
  <header>
         <div class="nav-bar">
         <img src="omahku.png" class="logo">
+     	<ul class="menu">
+            <li><a href="index.html"> Home </a> </li>
+            <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Categories</a>
+            <div class="dropdown-content">
            <a href="Interior.html">Interior</a>
            <a href="Furniture.html">Furniture</a>
            <a href="Color.html">Color Inspiration</a>
