--- a/dp1.html
+++ b/dp1.html
@@ -34,8 +34,8 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>klasik</b></h1>
-<p>dapur adalah tempat untuk memenuhi kebutuhan makanan nada</p>
+<h1><b>Moderen</b></h1>
+<p>Memberikan pengalaman berbeda ketika memasak</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
