--- a/dp3.html
+++ b/dp3.html
@@ -34,8 +34,8 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>Minimais</b></h1>
-<p>dapur adalah tempat untuk memenuhi kebutuhan makanan nada</p>
+<h1><b>klasik</b></h1>
+<p>Tidak perlu repot membeli lemari untuk menyimpan alat masak anda, kami sudah menyediakan</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
