--- a/dp4.html
+++ b/dp4.html
@@ -34,8 +34,9 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>Tradisional</b></h1>
-<p>dapur adalah tempat untuk memenuhi kebutuhan makanan nada</p>
+<h1><b>Moderen</b></h1>
+<p><b>peralatan lengkap mempermudak anda memasak</b></p>
+<p>&nbsp;</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
