--- a/dpr2.html
+++ b/dpr2.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>Urban</b></h1>
-<p>dengan disain layaknya di perkotaan</p>
+<p>dengan disain layaknya di perkotaan namun fasilitass lengkap</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
