--- a/km1.html
+++ b/km1.html
@@ -36,6 +36,7 @@
 <div class="Product-Description">
 <h1><b>Tradisional</b></h1>
 <p>dengandisain tradisional mengingatkan pada masa muda anda</p>
+<p>anda bisa mrubah disain sesuka anda</p>
 
 </div>
 <div class="Product-price">
