--- a/kt3.html
+++ b/kt3.html
@@ -37,7 +37,7 @@
 <h1><b>Tua</b></h1>
 <p>Ukuran : 3 x 3 </p>
 <p>ukuran spring bed 180 x 200</p>
-<p>kamar tidur model lama</p>
+<p>kamar tidur model lama memberikan kesan ketenagan untuk anda</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.600.000</span>
