--- a/kt4.html
+++ b/kt4.html
@@ -37,7 +37,7 @@
 <h1><b>Moderen</b></h1>
 <p>Ukuran : 3 x 3 </p>
 <p>ukuran spring bed 180 x 200 vm</p>
-<p>menambah kesan mewah pada kamar tidur </p>
+<p>menambah kesan mewah pada kamar tidur anda se keluarga</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
