--- a/rt3.html
+++ b/rt3.html
@@ -13,7 +13,16 @@
 <body>
  <header>
         <div class="nav-bar">
-      <a href="Art.html">Art & Crafts</a>
+        <img src="omahku.png" class="logo">
+     	<ul class="menu">
+            <li><a href="index.html"> Home </a> </li>
+            <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Categories</a>
+            <div class="dropdown-content">
+           <a href="Interior.html">Interior</a>
+           <a href="Furniture.html">Furniture</a>
+           <a href="Color.html">Color Inspiration</a>
+           <a href="Art.html">Art & Crafts</a>
             <li><a href="Contact.html"> Contact</a> </li>
             <li><a href="About.html">About</a> </li>
                 </ul>
@@ -26,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
+<p>moderen simpel minimalis</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
