--- a/dp1.html
+++ b/dp1.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>Moderen</b></h1>
-<p>Memberikan pengalaman berbeda ketika memasak</p>
+<p>Memberikan pengalaman berbeda ketika memasak dengan adanya perabotan legkap dan moderen</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
