--- a/dp2.html
+++ b/dp2.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>Minimalis</b></h1>
-<p>Layout kompleks mempermudah saat mencari alat masak</p>
+<p>Layout kompleks mempermudah saat mencari alat masak memudahkan anda jika ingin menambah alat masak</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
