--- a/dp3.html
+++ b/dp3.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>Tidak perlu repot membeli lemari untuk menyimpan alat masak anda, kami sudah menyediakan</p>
+<p>Tidak perlu repot membeli lemari untuk menyimpan alat masak anda, kami sudah menyediakan anda bisa memilih kapasitas lemari sesuai kebutuhan anda</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
