--- a/dp4.html
+++ b/dp4.html
@@ -36,6 +36,7 @@
 <div class="Product-Description">
 <h1><b>Moderen</b></h1>
 <p><b>peralatan lengkap mempermudak anda memasak</b></p>
+<p>anda tidak perlu kebingungan saat mencari alat masak yang dibutuhkan</p>
 <p>&nbsp;</p>
 </div>
 <div class="Product-price">
