--- a/km3.html
+++ b/km3.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>kamar  mandi adalah tempat untuk memenuhi kebutuhan kebersihan anda</p>
+<p><b>dengan disain klasik memberikan kesan tersendiri saat anda mengunakan</b></p>
 </div>
 <div class="Product-price">
 <span>Rp.2.300.000</span>
