--- a/dpr1.html
+++ b/dpr1.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>nostalgia masa muda anda dengan disain klasik ini</p>
+<p>nostalgia masa muda anda dengan disain klasik ini memberikan rasa nyaman saat memasak</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
