--- a/kt1r.html
+++ b/kt1r.html
@@ -38,7 +38,7 @@
 <p>Ukuran : 3 x 3 </p>
 <p>ukuran spring bed 200 x 200</p>
 <p>desain minimalis, simpel, lebar</p>
-<p>tepat untuk tempat sempit cukup unuk anda yang hanya memiliki ruangan terbatas</p>
+<p>tepat untuk tempat sempit cukup unuk anda yang hanya memiliki ruangan terbatas namun tetap memerlukan ruangan yang banyak</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.300.000</span>
