--- a/DFR9.html
+++ b/DFR9.html
@@ -43,8 +43,7 @@
 </div>
 <div class="Product-price">
 <span>Rp.1.000.000</span>
-<a href="" target="_blank" class="cart-btn">Beli</a>
-<br>&copy; omahku.com
+<a href="DBeli.html" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
