--- a/DFR.html
+++ b/DFR.html
@@ -45,8 +45,7 @@
 </div>
 <div class="Product-price">
 <span>Rp.2.800.000</span>
-<a href="" target="_blank" class="cart-btn">Beli</a>
-<br>&copy; omahku.com
+<a href="DBeli.html" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
