--- a/DFR11.html
+++ b/DFR11.html
@@ -20,7 +20,7 @@
             <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">Categories</a>
             <div class="dropdown-content">
-           <a href="Interiorfx.html">Interior</a>
+           <a href="Interior.html">Interior</a>
            <a href="Furniture.html">Furniture</a>
            <a href="Color.html">Color Inspiration</a>
            <a href="Art.html">Art & Crafts</a>
@@ -47,8 +47,7 @@
 </div>
 <div class="Product-price">
 <span>Rp.3.000.000</span>
-<a href="" target="_blank" class="cart-btn">Beli</a>
-<br>&copy; omahku.com
+<a href="DBeli.html" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
