--- a/DFR4.html
+++ b/DFR4.html
@@ -44,8 +44,7 @@
 </div>
 <div class="Product-price">
 <span>Rp.1.000.000</span>
-<a href="" target="_blank" class="cart-btn">Beli</a>
-<br>&copy; omahku.coms
+<a href="DBeli.html" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
