--- a/DFR8.html
+++ b/DFR8.html
@@ -43,7 +43,7 @@
 </div>
 <div class="Product-price">
 <span>Rp.530.000</span>
-<a href="" target="_blank" class="cart-btn">Beli</a>
+<a href="DBeli.html" class="cart-btn">Beli</a>
 </div>
 </div>
 </main>
