--- a/kt2.html
+++ b/kt2.html
@@ -36,8 +36,8 @@
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
 <p>Ukuran : 4 x 4 </p>
-<p>ukuran spring bed 180 x 200</p>
-<p>ukuran ranjang yang lebar dan kokoh mampu menampung hingga 2 orang</p>
+<p>ukuran bed 180 x 200</p>
+<p>ukuran ranjang yang lebar dan kokoh mampu menampung hingga 2 orang tidak perlu takut kehabisan ruang</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.500.000</span>
