--- a/kt3.html
+++ b/kt3.html
@@ -38,6 +38,7 @@
 <p>Ukuran : 3 x 3 </p>
 <p>ukuran spring bed 180 x 200</p>
 <p>kamar tidur model lama memberikan kesan ketenagan untuk anda</p>
+<p>sehingga anda bisa segera tertidur dengan nyaman</p>
 </div>
 <div class="Product-price">
 <span>Rp.2.600.000</span>
