--- a/dpr3.html
+++ b/dpr3.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>Minimais</b></h1>
-<p>dapur adalah tempat untuk memenuhi kebutuhan makanan nada dengan disain minimalis</p>
+<p>dapur adalah tempat untuk memenuhi kebutuhan makanan nada dengan disain minimalis menjadika tidak memerlukan banyak ruang</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
