--- a/rt1.html
+++ b/rt1.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>Memberikan kesan tenang dan nyaman untuk tamu anda</p>
+<p>Memberikan kesan tenang dan nyaman untuk tamu anda sehingga betah untuk duduk dan mengobrol lama</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
