--- a/rt2.html
+++ b/rt2.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>dapta menampung banyak orang sehingga tidak menganggu aktufutas anda</p>
+<p>dapta menampung banyak orang sehingga tidak menganggu aktufutas anda ketika teman anda berkunjung ke rumah anda</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
