--- a/rt3.html
+++ b/rt3.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>klasik</b></h1>
-<p>moderen simpel minimalis</p>
+<p>moderen simpel minimalis dan mampu menampung banyak orang</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
