--- a/rt4.html
+++ b/rt4.html
@@ -35,7 +35,7 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>Urban</b></h1>
-<p>tak perlu repot repot jika memiliki tammu banya kamu akan mengatasinyya .</p>
+<p>tak perlu repot repot jika memiliki tammu banya kamu akan mengatasinyya . anda hanya perlu menyediakan ruangan untuk disainer kami meletakkan perabotan</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
