--- a/km4.html
+++ b/km4.html
@@ -41,6 +41,7 @@
 <span>Rp.2.100.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
+<br>&copy; 2018 Omahku.com
 </div>
 </div>
 </main>
