--- a/kt1r.html
+++ b/kt1r.html
@@ -44,6 +44,7 @@
 <span>Rp.2.300.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
+<br>&copy; 2018 Omahku.com
 </div>
 </div>
 </main>
