--- a/kt2.html
+++ b/kt2.html
@@ -43,6 +43,7 @@
 <span>Rp.2.500.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
+<br>&copy; 2018 Omahku.com
 </div>
 </div>
 </main>
