--- a/dpr2.html
+++ b/dpr2.html
@@ -35,12 +35,13 @@
 <div class="right-column">
 <div class="Product-Description">
 <h1><b>Urban</b></h1>
-<p>dengan disain layaknya di perkotaan namun fasilitass lengkap</p>
+<p>dengan disain layaknya di perkotaan namun fasilitas tetap lengkap</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
+<br>&copy; 2018 Omahku.com	
 </div>
 </div>
 </main>
