--- a/login.html
+++ b/login.html
@@ -3,9 +3,10 @@
 <head>
 	<title>Login</title>
 	<link rel="stylesheet" type="text/css" href="login.css">
+    <link rel="stylesheet" type="text/css" href="animated.css">
 </head>
 <body>
-    <div class="login-box">
+    <div class="login-box animated fadeIn">
     	<img src="avatar.png" class="avatar">
     	   <h1>Login Here</h1>
     	   <form>
