--- a/signup.html
+++ b/signup.html
@@ -3,9 +3,10 @@
 <head>
 	<title>Sign up</title>
     <link rel="stylesheet" type="text/css" href="signup.css">
+    <link rel="stylesheet" type="text/css" href="animated.css">
 </head>
 <body>
-    <div class="login-box">
+    <div class="login-box animated fadeIn">
        <img src="avatar.png" class="avatar">
         <h1>Sign Up</h1>
     	   <form>
@@ -13,7 +14,11 @@
     	   	<input type="text" name="Full Name" placeholder="Enter Full Name">
             <p>Username</p>
             <input type="text" name="Username" placeholder="Enter Username">
-        
+            <p>Email Address</p>
+            <input type="text" name="Email Address" placeholder="Enter Email Address">
+            <p>Password</p>
+    	   	<input type="Password" name="Password" placeholder="Enter Password">
+            <input type="submit" name="submit" value="Sign Up" href="index.html">
     	   </form>
      </div>
 </body>
