--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
          
 <section id="start">
     <div class="container">
-    
+    <div class="row">
+    <div class="col-lg-12 col-md-12">
     <div class="about_area">
     <div class="heading">
       <h2 class="wow fadeInLeftBig">Get Started</h2>
