--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-6">
       <div class="footer_left">
-			   <p>Copyright &copy; 2018 <a href="http://www.Omahku.com">Omahku</a>. All Rights Reserved</p>
+			   <p>Copyright &copy; 2018 <a href="http://www.Omahku.com">Omahku</a>All Rights Reserved</p>
       </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6">
