--- a/color.html
+++ b/color.html
@@ -4,6 +4,7 @@
 	<title>Color Inspiration</title>
 	<link rel="icon" href="OMAHKU.png">
 	<link rel="stylesheet" type="text/css" href="color.css">
+   <link rel="stylesheet" type="text/css" href="animated.css">
 </head>
 <body>
 	<header>
@@ -22,14 +23,19 @@
             <li><a href="About.html"> About </a> </li>
             </ul>      
         </div>
-
+        
+        <div class="h2 animated fadeInDown">
         <h2>Color Inspiration</h2>
+        </div>
 
 	</header>
 
 <!-- RED -->
     <div class="red">
 	<h3>Red</h3>
+	<br><br><br>
+    <p>Warna merah selalu identik dengan warna yang melambangkan keberanian. Selain itu warna ini akan memberi kesan kuat, erostis bahkan merah merupakan simbol api. Tetapi warna merah dengan berbagai turunannya dapat menciptakan kesan cinta, perhatian. Dominasi warna merah dalam suatu ruangan hendaknya diimbangi dengan warna-warna yang lembut sehingga kesan garang dan emosional dapat terkurangi.</p>
+    <br><br><br><br><br>
 
 	<div class="responsive">
   <div class="gallery">
@@ -70,6 +76,9 @@
 
 <div class="blue">
 	<h3>Blue</h3>
+	<br><br><br>
+    <p>Warna biru mampu memberi kesan komunikatif, inspiraf spiritual, tenang, kelembutan, dan ketenangan. Kombinasi warna biru dengan warna merah dan kuning akan memberi kesan hangat dan optimisme. Warna biru sangat tepat diaplikasikan dalam desain interior dan eksterior rumah di saat tingkat stres dan permasalahan hidup semakin meningkat.</p>
+    <br><br><br><br><br>
 
     <div class="responsive">
   <div class="gallery">
@@ -111,7 +120,8 @@
 <div class="green">
 	<h3>Green</h3>
 	<br><br><br>
- 
+    <p>Warna hijau mencerminkan warna bumi. Warna ini akan memberikan nuansa keakraban dalam sebuah ruangan. Warna hijau juga dapat memberikan relaksasi pada sebuah ruangan. Warna hijau juga dapat menetralisir mata sehingga menjadikan rasa nyaman jika diterapkan dalam sebuah ruangan. Selain itu pengaplikasian warna hijau dalam suatu ruangan dapat merangsang kreatifitas. Sehingga ruangan menjadi tempat yang dapat menginspirasi semua orang.</p>
+    <br><br><br><br><br>
 
     <div class="responsive">
   <div class="gallery">
@@ -152,6 +162,9 @@
 
 <div class="yellow">
 	<h3>Yellow</h3>
+	<br><br><br>
+    <p>Warna kuning mengacu pada matahari. Warna kuning mampu merangsang daya imajinasi seseorang. Jika warna ini diaplikasikan pada sebuah ruangan akan memberikan kehangatan. Warna kuning juga sangat efektif untuk menarik perhatian. Warna ini sangat pas untuk mewarnai elemen desain interior yang akan dijadikan sebagai vocal poin.</p>
+    <br><br><br><br><br>
 
     <div class="responsive">
   <div class="gallery">
@@ -191,6 +204,9 @@
 <!--Purple-->
 <div class="purple">
 	<h3>Purple</h3>
+	<br><br><br>
+    <p>Warna ini membawa perasaan damai dan saling memahami. Warna ini juga membantu tidur Anda. Warna ini juga dikatikan dengan spiritualitas, intuisi, kebijaksanaan, penguasaan, kekuatan mental dan fokus. Ungu adalah warna yang memberikan kesan spiritual,Ungu juga warna yang unik karena sangat jarang kita lihat di alam. Dengan menggunakan warna ungu kita bisa memberikan kesan unik pada desain logo kita, baik kita menggunakan secara dominan atau hanya sebagai aksen saja.</p>
+    <br><br><br><br><br>
 
     <div class="responsive">
   <div class="gallery">
@@ -230,7 +246,9 @@
 <!--White-->
 <div class="white">
 	<h3>White</h3>
-
+	<br><br><br>
+    <p>Warna putih merupakan warna netral yang dapat memberik kesan damai, sederhana, bersih dan suci. Warna ini sangat cocok untuk menekankan warna lain sehingga lebih menonjol. Kesederhanaan warna putih ini sangat baik jika dipadu dengan warna gelap dengan catatan warna gelap yang dipadukan dengan komposisi yang seimbang. Dominasi warna putih pada suatu ruangan dapat menambah ruangan menjadi terlihat lebih luas dan bersih.</p>
+    <br><br><br><br><br>
 
     <div class="responsive">
   <div class="gallery">
@@ -270,6 +288,9 @@
 <!--brown-->
 <div class="brown">
 	<h3>Brown</h3>
+	<br><br><br>
+    <p>Warna coklat sering diidentikkan dengan warna tanah. Warna ini menunjukkan persahabatan. Agar ruangan yang mengaplikasikan warna coklat menjadi menarik, hendaknya dikombinasikan dengan elemen dekorasi yang lainnya. Karena warna coklat yang tidak dikombinasikan dengan elemen dekorasi lainnya, warna coklat tersebut tidak akan mampu memberi daya tarik apapun.</p>
+    <br><br><br><br><br>
 
     <div class="responsive">
   <div class="gallery">
@@ -308,6 +329,9 @@
 	<!--brown-->
 <div class="black">
 	<h3>Black</h3>
+	<br><br><br>
+    <p>Warna hitam selalu terlihat menyeramkan. Dalam sebuah ruangan warna hitam akan memberi kesan sempit, sumpek dan tidak longgar. Tetapi warna hitam juga dapat memberi kesan kuat dan dalam. Warna hitam juga termasuk warna yang formalitas. Ia juga melambangkan sifat perlindungan. Seperti halnya warna merah, warna hitam ini juga akan mempertajam dan memperkuat elemen lain yang dipadukan dengan warna hitam. Kombinasi warna hitam dengan warna putih akan membuat keseimbangan dalam sebuah ruangan. Paduan hitam putih itulah yang sering dinamakan sebagai warna monokrom, yang merupakan kombinasi warna yang masih banyak diminati.</p>
+    <br><br><br><br><br>
 
     <div class="responsive">
   <div class="gallery">
