--- a/About.html
+++ b/About.html
@@ -25,6 +25,7 @@
     <link id="orginal" href="css/themes/default-theme.css" rel="stylesheet">
     <!-- Main structure css file -->
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="animated.css">
 	</head>
 <body>
      <header>
