--- a/dp2.html
+++ b/dp2.html
@@ -34,14 +34,13 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>Minimalis</b></h1>
-<p>Layout kompleks mempermudah saat mencari alat masak memudahkan anda jika ingin menambah alat masak</p>
+<h1><b>klasik</b></h1>
+<p>Beberapa langkah lagi Anda akan menciptakan rumah impian Anda! isi kuesioner kami sehingga kami dapat mempelajari lebih lanjut tentang proyek rumah Anda sebelum bertemu dengan desainer Anda.</p>
 </div>
 <div class="Product-price">
 <span>Rp.300.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
-<br>&copy; 2018 Omahku.com
 </div>
 </div>
 </main>
