--- a/km1.html
+++ b/km1.html
@@ -34,16 +34,14 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>Tradisional</b></h1>
-<p>dengandisain tradisional mengingatkan pada masa muda anda namun dengan sentuhan teknologi terkini</p>
-<p>anda bisa mrubah disain sesuka anda</p>
+<h1><b>klasik</b></h1>
+<p>kamar mandi ini merupakan kamar mandi klasik. ukuran kramik yang digunakan 30 cm x 60 cm.</p>
 
 </div>
 <div class="Product-price">
 <span>Rp.1.700.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
-<br>&copy; 2018 Omahku.com
 </div>
 </div>
 </main>
