--- a/km2.html
+++ b/km2.html
@@ -34,14 +34,13 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>Moderen</b></h1>
-<p>menambah kesan kemewahan rumah anda dengan fasilitas air hangat jamgam takut mandi pagi di cuaca yang dingin anda dapat mengatu berapa suku yang akan dikeluarkan oleh heater ini</p>
+<h1><b>klasik</b></h1>
+<p>suasana hangat dikamar mandi tercipta dengan memilih warna hangat.  Kamar mandi bernuansa gelap, siapa takut? Bila dahulu kamar mandi gelap dianggap kotor dan menyeramkan. Kini, kamar mandi berwarna hitam menjadi populer karena kesan minimalis mewah yang diberikan. Untuk kamar mandi ini, Anda sangat perlu memperhatikan pencahayaan. Pasang lampu berwarna putih dan juga jendela untuk memberikan pencahayaan alami. </p>
 </div>
 <div class="Product-price">
 <span>Rp.2.300.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
-<br>&copy; 2018 Omahku.com
 </div>
 </div>
 </main>
