--- a/km4.html
+++ b/km4.html
@@ -34,14 +34,13 @@
 </div>
 <div class="right-column">
 <div class="Product-Description">
-<h1><b>Minimalis</b></h1>
-<p>tepat untuk ruang sempit namun tetap lengkap dengan fasilitas air hangat dan dingin</p>
+<h1><b>klasik</b></h1>
+<p>kamarmandi ukuran 2 x 2 ini memiliki efek cahaya lampu yang terang dan gaya klasik  </p>
 </div>
 <div class="Product-price">
 <span>Rp.2.100.000</span>
     <br>
 <a href="" target="_blank" class="cart-btn">Beli</a>
-<br>&copy; 2018 Omahku.com
 </div>
 </div>
 </main>
