--- a/rk3.html
+++ b/rk3.html
@@ -14,7 +14,16 @@
  <header>
         <div class="nav-bar">
         <img src="omahku.png" class="logo">
-         <a href="Furniture.html">Furniture</a>
+     	<ul class="menu">
+            <li><a href="index.html"> Home </a> </li>
+            <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Categories</a>
+            <div class="dropdown-content">
+           <a href="Interior.html">Interior</a>
+           <a href="Furniture.html">Furniture</a>
+           <a href="Color.html">Color Inspiration</a>
+           <a href="Art.html">Art & Crafts</a>
+            <li><a href="Contact.html"> Contact</a> </li>
             <li><a href="About.html">About</a> </li>
                 </ul>
         </div>
