--- a/rk1.html
+++ b/rk1.html
@@ -3,6 +3,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Product Color Charger | Tutorial by lisense</title>
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+<link href="DFurnitur.css" rel="stylesheet">
 <meta name="robots" content="noindex,follow"/>
     
 <meta name="viewport" content="width=device-width, initial-scale=1">
