--- a/rk4.html
+++ b/rk4.html
@@ -15,7 +15,13 @@
         <div class="nav-bar">
         <img src="omahku.png" class="logo">
      	<ul class="menu">
-         <a href="Color.html">Color Inspiration</a>
+            <li><a href="index.html"> Home </a> </li>
+            <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Categories</a>
+            <div class="dropdown-content">
+           <a href="Interior.html">Interior</a>
+           <a href="Furniture.html">Furniture</a>
+           <a href="Color.html">Color Inspiration</a>
            <a href="Art.html">Art & Crafts</a>
             <li><a href="Contact.html"> Contact</a> </li>
             <li><a href="About.html">About</a> </li>
